--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: DogOnt
 	  <h3>News</h3>
 	  <ul>
 		{% for post in site.posts %} {%if forloop.index0 < 5 %}
-		<li>{{ post.date | date: "%-d %B %Y" }} - {{post.title}}, <a href="{{site.url}}/{{post.url}}">more...</a></li> 
+		<li>{{ post.date | date: "%-d %B %Y" }} - {{post.title}}, <a href="{{site.url}}{{post.url}}">more...</a></li> 
 		{% endif %} {% endfor %}
 	  </ul>
 	</div>
