--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@ layout: default
 title: DogOnt
 ---
 <div class="row">
-	<div class="col-md-10 col-md-offset-1 well">
+	<div class="col-md-12 col-lg-10 col-lg-offset-1 well">
 		<h3>Quick Overview</h3>
 		DogOnt was firstly introduced in 2008, and was originally meant to represent home automation devices for interoperability support. In the past years it underwent several reviews and amendments, and its scope was widened to include devices and technologies typically part of an indoor IoT network. If the original focus was more on modeling operational aspects enabling device control, the latest version, has moved to a more informed, modular and linked modeling approach which enables adoption of DogOnt-based representations at different abstraction layers. While device control and interoperability is still one of the pillars of the representation, extensibility, modularity and service-based representation of IoT entities empower the latest ontology, enabling modular integration and reconciliation of different specifications, e.g., the cluster-based ZigBee Home Automation model and the registry-based Modbus data representation. More attention is also devoted to the Linked Open Data initiative: the ontology is now listed in the Linked Open Vocabulary data set and its connections with well-known ontologies are being improved day by day.</p>   
 	</div>	
 </div>
 <div class="row">
-  <div class="col-md-3 col-md-offset-1">
+  <div class="col-sm-12 col-md-5 col-lg-4 col-lg-offset-1">
     <iframe src="https://www.slideshare.net/slideshow/embed_code/key/FOPuR7d8seSljd" width="400" height="339" frameborder="0" marginwidth="10" marginheight="0" scrolling="no"></iframe>
   </div>
-    <div class="col-md-7">
+    <div class="col-sm-12 col-md-7 col-lg-6">
       <div class ="row">
 	<div class="col-md-6">
 	  <h3>Scope</h3>
