updated documentation to the last version

--- a/documentation/provenance/provenance-en.html
+++ b/documentation/provenance/provenance-en.html
@@ -10,11 +10,11 @@
 <h1>Provenance for DogOnt: Ontology Modeling for Intelligent Domotic Environments Documentation (/home/bonino/Downloads/myDocumentation)</h1>
 <ul>
 	<li>Ontology created by: :
- Dario Bonino (dario.bonino@polito.it, dario.bonino@gmail.com) (null),</li>	<li>Ontology contributed to by: :
+ Dario Bonino (dario.bonino@gmail.com) (null),</li>	<li>Ontology contributed to by: :
  Luigi De Russis (luigi.derussis@polito.it, luigidr@gmail.com) (null),</li>
-<li>/home/bonino/Downloads/myDocumentation is a revision of the previous version 3.2.11</li>
+<li>/home/bonino/Downloads/myDocumentation is a revision of the previous version 4.0.0</li>
 <li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
-<li>The documentation was generated at 2017-04-20</ul>
+<li>The documentation was generated at 2017-11-03</ul>
 </div>
 <p>back to <a href="..\index-en.html">documentation</a>. <a href="provenance-en.ttl">TTL format</a></p></div>
 </body> 
