--- a/documentation/sections/crossref-en.html
+++ b/documentation/sections/crossref-en.html
@@ -52840,7 +52840,7 @@ It mus be noticed that the functionality modeling uses existential quantifiers f
             <dt>has range</dt>
             <dd>
                <span class="dotted"
-                     title="http://purl.oclc.org/NET/muo/muo#UnitOfMeasurement">unit of measurement</span>
+                     title="http://elite.polito.it/ontologies/muo-vocab.owl#UnitOfMeasurement">unit of measurement</span>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
