--- a/documentation/index-en.html
+++ b/documentation/index-en.html
@@ -15,7 +15,7 @@
 - how the surrounding environment is composed;
 - what kind of architectural elements and furniture are placed inside the home, if the environment considered is a home.
 
-This information can then be leveraged by inference-based intelligent systems to provide advanced functionality required in Intelligent Domotic Environments.  DogOnt is currently adopted as normative data model for the Dog gateway (http://http://dog-gateway.github.io/)", "datePublished":"2017-04-20", "version":"4.0.0", "author":[{"@type":"Person","name":"Dario Bonino (dario.bonino@polito.it, dario.bonino@gmail.com)"}], "contributor":[{"@type":"Person","name":"Luigi De Russis (luigi.derussis@polito.it, luigidr@gmail.com)"}]}</script>
+This information can then be leveraged by inference-based intelligent systems to provide advanced functionality required in Intelligent Domotic Environments.  DogOnt is currently adopted as normative data model for the Dog gateway (http://http://dog-gateway.github.io/)", "datePublished":"2017-11-03", "version":"4.0.1", "author":[{"@type":"Person","name":"Dario Bonino (dario.bonino@gmail.com)"}], "contributor":[{"@type":"Person","name":"Luigi De Russis (luigi.derussis@polito.it, luigidr@gmail.com)"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -69,24 +69,39 @@ function loadTOC(){
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
 <h1>DogOnt: Ontology Modeling for Intelligent Domotic Environments</h1>
-<h2>Release  2017-04-20</h2>
+<h2>Release  2017-11-03</h2>
 
 
 <dl>
 <dt>Previous version:</dt>
-<dd><a href="3.2.11">3.2.11</a></dd>
+<dd><a href="4.0.0">4.0.0</a></dd>
 <dt>Revision:</dt>
-<dd>4.0.0</dd>
+<dd>4.0.1</dd>
 <dt>Authors:</dt>
-<dd>Dario Bonino (dario.bonino@polito.it, dario.bonino@gmail.com)</dd>
+<dd>Dario Bonino (dario.bonino@gmail.com)</dd>
 
 <dt>Contributors:</dt>
 <dd>Luigi De Russis (luigi.derussis@polito.it, luigidr@gmail.com)</dd>
 
-<dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="http://insertlicenseURIhere.org" target="_blank"><img src="https://img.shields.io/badge/License-Apache%20License,%20Version%202.0%20(the%20"License");%20you%20may%20not%20use%20this%20file%20except%20in%20compliance%20with%20the%20License.%20You%20may%20obtain%20a%20copy%20of%20the%20License%20at%20%20%20%20%20%20%20http://www.apache.org/licenses/LICENSE_2.0%20%20Unless%20required%20by%20applicable%20law%20or%20agreed%20to%20in%20writing,%20software%20distributed%20under%20the%20License%20is%20distributed%20on%20an%20"AS%20IS"%20BASIS,%20WITHOUT%20WARRANTIES%20OR%20CONDITIONS%20OF%20ANY%20KIND,%20either%20express%20or%20implied.%20See%20the%20License%20for%20the%20specific%20language%20governing%20permissions%20and%20limitations%20under%20the%20License%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
+<dt>Imported Ontologies:</dt>
+<dd><a href="http://elite.polito.it/ontologies/muo-vocab.owl#">muo-vocab.owl#</a></dd><dd><a href="http://elite.polito.it/ontologies/ucum-instances.owl">ucum-instances.owl</a></dd>
+
+<dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="http://insertlicenseURIhere.org" target="_blank"><img src="https://img.shields.io/badge/License-Copyright%20(c)%202008_2017%20Dario%20Bonino
+
+Licensed%20under%20the%20Apache%20License,%20Version%202.0%20(the%20"License");
+you%20may%20not%20use%20this%20file%20except%20in%20compliance%20with%20the%20License.
+You%20may%20obtain%20a%20copy%20of%20the%20License%20at
+
+%20%20%20%20%20http://www.apache.org/licenses/LICENSE_2.0
+
+Unless%20required%20by%20applicable%20law%20or%20agreed%20to%20in%20writing,%20software
+distributed%20under%20the%20License%20is%20distributed%20on%20an%20"AS%20IS"%20BASIS,
+WITHOUT%20WARRANTIES%20OR%20CONDITIONS%20OF%20ANY%20KIND,%20either%20express%20or%20implied.
+See%20the%20License%20for%20the%20specific%20language%20governing%20permissions%20and
+limitations%20under%20the%20License-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <dt>Cite as:</dt>
-<dd>Dario Bonino (dario.bonino@polito.it, dario.bonino@gmail.com). DogOnt: Ontology Modeling for Intelligent Domotic Environments.Revision: 4.0.0.</dd>
+<dd>Dario Bonino (dario.bonino@gmail.com). DogOnt: Ontology Modeling for Intelligent Domotic Environments.Revision: 4.0.1.</dd>
 </dl>
 
 <a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a><hr/>
