--- a/documentation/sections/introduction-en.html
+++ b/documentation/sections/introduction-en.html
@@ -10,17 +10,18 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>dogont</b></td><td>&lt;http://elite.polito.it/ontologies/dogont.owl&gt;</td></tr>
 <tr><td><b>ns</b></td><td>&lt;http://creativecommons.org/ns&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
-<tr><td><b>muo</b></td><td>&lt;http://purl.oclc.org/NET/muo/muo&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
 <tr><td><b>dul-owl</b></td><td>&lt;http://www.loa-cnr.it/ontologies/DUL.owl&gt;</td></tr>
 <tr><td><b>ssn</b></td><td>&lt;http://purl.oclc.org/NET/ssnx/ssn&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
 <tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
+<tr><td><b>muo-vocab</b></td><td>&lt;http://elite.polito.it/ontologies/muo-vocab.owl&gt;</td></tr>
 <tr><td><b>v1</b></td><td>&lt;http://purl.org/goodrelations/v1&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>foaf</b></td><td>&lt;http://xmlns.com/foaf/0.1&gt;</td></tr>
 <tr><td><b>ontologies</b></td><td>&lt;http://elite.polito.it/ontologies&gt;</td></tr>
+<tr><td><b>dc</b></td><td>&lt;http://purl.org/dc/elements/1.1&gt;</td></tr>
 </tbody>
 </table>
 </div>
