--- a/documentation/sections/overview-en.html
+++ b/documentation/sections/overview-en.html
@@ -112,6 +112,24 @@ This ontology has the following classes and properties.</span>
          title="http://elite.polito.it/ontologies/dogont.owl#AntiIntrusionSystem">AntiIntrusionSystem</a>
    </li>
    <li>
+      <a href="#ApparentEnergyMeasurementFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#ApparentEnergyMeasurementFunctionality">
+         <span>apparent energy measurement functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ApparentEnergyMeasurementNotificationFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#ApparentEnergyMeasurementNotificationFunctionality">
+         <span>apparent energy measurement notification functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ApparentEnergyStateValue"
+         title="http://elite.polito.it/ontologies/dogont.owl#ApparentEnergyStateValue">
+         <span>apparent energy state value</span>
+      </a>
+   </li>
+   <li>
       <a href="#ApparentPowerMeasurementFunctionality"
          title="http://elite.polito.it/ontologies/dogont.owl#ApparentPowerMeasurementFunctionality">
          <span>apparent power measurement functionality</span>
@@ -1532,6 +1550,30 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#GenericContinuousState"
+         title="http://elite.polito.it/ontologies/dogont.owl#GenericContinuousState">
+         <span>generic continuous state</span>
+      </a>
+   </li>
+   <li>
+      <a href="#GenericDiscreteState"
+         title="http://elite.polito.it/ontologies/dogont.owl#GenericDiscreteState">
+         <span>generic discrete state</span>
+      </a>
+   </li>
+   <li>
+      <a href="#GenericSensor"
+         title="http://elite.polito.it/ontologies/dogont.owl#GenericSensor">
+         <span>generic sensor</span>
+      </a>
+   </li>
+   <li>
+      <a href="#GenericValueNotificationFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#GenericValueNotificationFunctionality">
+         <span>generic value notification functionality</span>
+      </a>
+   </li>
+   <li>
       <a href="#GetClimateScheduleCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#GetClimateScheduleCommand">
          <span>get climate schedule command</span>
@@ -1604,6 +1646,12 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#GetGenericValue"
+         title="http://elite.polito.it/ontologies/dogont.owl#GetGenericValue">
+         <span>get generic value</span>
+      </a>
+   </li>
+   <li>
       <a href="#GetHeatingEnergyCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#GetHeatingEnergyCommand">
          <span>get heating energy command</span>
@@ -1673,12 +1721,6 @@ This ontology has the following classes and properties.</span>
       <a href="#GetPowerCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#GetPowerCommand">
          <span>get power command</span>
-      </a>
-   </li>
-   <li>
-      <a href="#GetPowerFactorCommand"
-         title="http://elite.polito.it/ontologies/dogont.owl#GetPowerFactorCommand">
-         <span>get power factor command</span>
       </a>
    </li>
    <li>
@@ -1766,6 +1808,12 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#Get1PhaseApparentEnergyCommand"
+         title="http://elite.polito.it/ontologies/dogont.owl#Get1PhaseApparentEnergyCommand">
+         <span>get1 phase apparent energy command</span>
+      </a>
+   </li>
+   <li>
       <a href="#Get1PhaseApparentPowerCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#Get1PhaseApparentPowerCommand">
          <span>get1 phase apparent power command</span>
@@ -1775,6 +1823,12 @@ This ontology has the following classes and properties.</span>
       <a href="#Get1PhaseCurrentCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#Get1PhaseCurrentCommand">
          <span>get1 phase current command</span>
+      </a>
+   </li>
+   <li>
+      <a href="#Get1PhasePowerFactorCommand"
+         title="http://elite.polito.it/ontologies/dogont.owl#Get1PhasePowerFactorCommand">
+         <span>get1 phase power factor command</span>
       </a>
    </li>
    <li>
@@ -1829,6 +1883,12 @@ This ontology has the following classes and properties.</span>
       <a href="#Get3PhaseLNVoltageCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#Get3PhaseLNVoltageCommand">
          <span>get3 phase l n voltage command</span>
+      </a>
+   </li>
+   <li>
+      <a href="#Get3PhasePowerFactorCommand"
+         title="http://elite.polito.it/ontologies/dogont.owl#Get3PhasePowerFactorCommand">
+         <span>get3 phase power factor command</span>
       </a>
    </li>
    <li>
@@ -2064,6 +2124,12 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#HVACSystem"
          title="http://elite.polito.it/ontologies/dogont.owl#HVACSystem">HVACSystem</a>
+   </li>
+   <li>
+      <a href="#HybridGenericControlFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#HybridGenericControlFunctionality">
+         <span>hybrid generic control functionality</span>
+      </a>
    </li>
    <li>
       <a href="#ISMBUwbGateway"
@@ -3936,6 +4002,12 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#SetGenericValue"
+         title="http://elite.polito.it/ontologies/dogont.owl#SetGenericValue">
+         <span>set generic value</span>
+      </a>
+   </li>
+   <li>
       <a href="#SetHourCommand"
          title="http://elite.polito.it/ontologies/dogont.owl#SetHourCommand">
          <span>set hour command</span>
@@ -4152,6 +4224,36 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#SinglePhaseApparentEnergyMeasurementFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseApparentEnergyMeasurementFunctionality">
+         <span>single phase apparent energy measurement functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhaseApparentEnergyMeasurementNotification"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseApparentEnergyMeasurementNotification">
+         <span>single phase apparent energy measurement notification</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhaseApparentEnergyMeasurementNotificationFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseApparentEnergyMeasurementNotificationFunctionality">
+         <span>single phase apparent energy measurement notification functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhaseApparentEnergyMeter"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseApparentEnergyMeter">
+         <span>single phase apparent energy meter</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhaseApparentEnergyState"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseApparentEnergyState">
+         <span>single phase apparent energy state</span>
+      </a>
+   </li>
+   <li>
       <a href="#SinglePhaseApparentPowerMeasurementFunctionality"
          title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseApparentPowerMeasurementFunctionality">
          <span>single phase apparent power measurement functionality</span>
@@ -4221,6 +4323,30 @@ This ontology has the following classes and properties.</span>
       <a href="#SinglePhaseEnergyMeter"
          title="http://elite.polito.it/ontologies/dogont.owl#SinglePhaseEnergyMeter">
          <span>single phase energy meter</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhasePowerFactorMeasurementFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhasePowerFactorMeasurementFunctionality">
+         <span>single phase power factor measurement functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhasePowerFactorMeasurementNotification"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhasePowerFactorMeasurementNotification">
+         <span>single phase power factor measurement notification</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhasePowerFactorMeasurementNotificationFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhasePowerFactorMeasurementNotificationFunctionality">
+         <span>single phase power factor measurement notification functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#SinglePhasePowerFactorMeasurementState"
+         title="http://elite.polito.it/ontologies/dogont.owl#SinglePhasePowerFactorMeasurementState">
+         <span>single phase power factor measurement state</span>
       </a>
    </li>
    <li>
@@ -5119,6 +5245,24 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#ThreePhaseFrequencyMeasurementNotification"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhaseFrequencyMeasurementNotification">
+         <span>three phase frequency measurement notification</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ThreePhaseFrequencyMeasurementNotificationFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhaseFrequencyMeasurementNotificationFunctionality">
+         <span>three phase frequency measurement notification functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ThreePhaseFrequencyMeasurementState"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhaseFrequencyMeasurementState">
+         <span>three phase frequency measurement state</span>
+      </a>
+   </li>
+   <li>
       <a href="#ThreePhaseLLVoltageMeasurementNotification"
          title="http://elite.polito.it/ontologies/dogont.owl#ThreePhaseLLVoltageMeasurementNotification">
          <span>three phase l l voltage measurement notification</span>
@@ -5128,6 +5272,30 @@ This ontology has the following classes and properties.</span>
       <a href="#ThreePhaseLNVoltageMeasurementNotification"
          title="http://elite.polito.it/ontologies/dogont.owl#ThreePhaseLNVoltageMeasurementNotification">
          <span>three phase l n voltage measurement notification</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ThreePhasePowerFactorMeasurementFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhasePowerFactorMeasurementFunctionality">
+         <span>three phase power factor measurement functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ThreePhasePowerFactorMeasurementNotification"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhasePowerFactorMeasurementNotification">
+         <span>three phase power factor measurement notification</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ThreePhasePowerFactorMeasurementNotificationFunctionality"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhasePowerFactorMeasurementNotificationFunctionality">
+         <span>three phase power factor measurement notification functionality</span>
+      </a>
+   </li>
+   <li>
+      <a href="#ThreePhasePowerFactorMeasurementState"
+         title="http://elite.polito.it/ontologies/dogont.owl#ThreePhasePowerFactorMeasurementState">
+         <span>three phase power factor measurement state</span>
       </a>
    </li>
    <li>
